prometeheus/ingres.yaml
---
apiVersion: authorization.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
spec:
  rules:
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus
            port:
              number: 80
